--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -107,13 +107,13 @@ guysfish
 ```
 
 
-The information to play close attention to among all of these results is the output of the Fisher's Exact test. The p-value displayed above is extremely small at 6e-04. This is an awfully small number. seeing this number means that these results are not likely to occur by chance and so the null hypothesis can be rejected in favor of the alternative.
+The information to play close attention to among all of these results is the output of the Fisher's Exact test. The p-value displayed above is extremely small at 6e-04. This is an awfully small number. seeing this number means that these results are not likely to occur by chance.
 
 
 
-The null hypothesis predicted that the deaths related to covid-19 are independent of sex. Since it is clear that sex does play a role in the death rate of individuals, the alternative hypothesis, that there is a correlation between covi-19 deaths and sex, is the favorable option.
+The null hypothesis predicted that the deaths related to covid-19 are independent of sex. Since it is clear that sex does play a role in the death rate of individuals, the alternative hypothesis, that there is a correlation between covid-19 deaths and sex, is the favorable option.
 
-Like the odd ratio above illustrates, guys(men) who recieved tha vaccine were 1.5 times more likely to get covid-19 than those who received the placebo. 
+The odd ratio above illustrates a ratio of 0.68. the guys(men) who received tha vaccine were 1.5 times more likely to get covid-19 than those who received the placebo. 
 
 
 ```{r}
@@ -202,7 +202,7 @@ galsfish
 The information to play close attention to among all of these results is the output of the Fisher's Exact test. The p-value displayed above is extremely small at 0.0000000000000002. This is an extremely tiny number. seeing this number means that these results are not likely to occur by chance and so the null hypothesis can be rejected in favor of the alternative.
 
 
-The Fishers's Exact Test illustrates that the odds ratio is 0.49.
+The Fishers's Exact Test illustrates that the odds ratio is 2.
 gals(Women) who got the drug were about 0.49 times more likely to get covid-19 than women that only took the placebo.
 
 
@@ -299,7 +299,7 @@ gaysfish
 
 The p-value is 6e-06. This in an incredibly small number and with that being said, the conclusion is that these results are unlikely to occur by chance.
 
-The Fishers's Exact Test illustrates that the odds ratio is 2.5.
+The Fishers's Exact Test illustrates that the odds ratio is 0.4
 Gay individuals who got the vaccine were about 2.5 times more likely to get Covid-19 than gays that took the placebo.
 
 The null hypothesis is rejected in favor the the alternative. The drug is completely ineffective in preventing the chances of getting covid-19 in individuals who identify as gay.
@@ -332,7 +332,7 @@ options(digits=2)
 
 Above is the effectiveness for the covid-19 for guys. If the effectiveness is above 50% that means that the vaccine is effective. Based on the interval seen above, we can conclude that the vaccine is ineffective in protecting people who identify as gay from getting covid-19. 
 
-The odds ratio is approximately how effective the vaccine is. The odds ratio for the gays folk be seen above as 29. This is completely ineffective. The people who take the vaccine are not better off then those who don't recive it at all. The effectiveness confidence interval for the people who identified as gay is 20.51 to 37.97.
+The odds ratio is approximately how effective the vaccine is. The odds ratio for the gays folk be seen above as 29. This is completely ineffective. The people who take the vaccine are not better off then those who don't receive it at all. The effectiveness confidence interval for the people who identified as gay is 20.51 to 37.97.
 
 
 
@@ -400,7 +400,7 @@ drugfish
 
 The p-value is 0.002. This in a small number and with that being said, the conclusion is that these results are unlikely to occur by chance.
 
-The Fishers's Exact Test illustrates that the odds ratio is 0.55.
+The Fishers's Exact Test illustrates that the odds ratio is 1.8
 drug users who got the vaccine were about half as likely to get Covid-19 than drug users that took the placebo.
 
 The null hypothesis is rejected in favor the the alternative. The drug is  effective in preventing the chances of getting covid-19 in drugusers.
@@ -425,11 +425,11 @@ options(digits=2)
 
 
 
-Above is the effectiveness for the covid-19 for guys. If the effectiveness is above 50% that means that the vaccine is effective. Based on the interval seen above, we cn conclude that the vaccine is highly effective in protecting gals from getting covid-19. 
+Above, is the effectiveness for the covid-19 for guys. If the effectiveness is above 50% that means that the vaccine is effective. Based on the interval seen above, we can conclude that the vaccine is effective in protecting drug users from getting covid-19. 
 
-The hallmark of an effective vaccine is 60% or better. This vaccine works great in protecting drugusers from contracting covid-19.
+The hallmark of an effective vaccine is 60% or better. This vaccine works great in protecting drug users from contracting covid-19.
 
-The odds ratio is approximately how effective the vaccine is. The odds ratio for the drug users can be seen above as 65. The effectiveness confidence interval for the gals is 54.96 to 73.63.
+The odds ratio is approximately how effective the vaccine is. The odds ratio for the drug users can be seen above as 65. The effectiveness confidence interval for the drug users is 54.96 to 73.63.
 
 
 
